--- a/Pymaceuticals_DanBruen/Pymaceutical_DanBruen_Main.ipynb
+++ b/Pymaceuticals_DanBruen/Pymaceutical_DanBruen_Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -146,7 +146,7 @@
        "4     b128         20           42.731552                 0  Capomulin"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -253,7 +253,7 @@
        "4  Capomulin         20           40.716325"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "100"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -293,20 +293,20 @@
     {
      "data": {
       "text/plain": [
-       "Stelasyn     10\n",
-       "Infubinol    10\n",
-       "Naftisol     10\n",
-       "Ketapril     10\n",
-       "Ceftamin     10\n",
-       "Ramicane     10\n",
-       "Capomulin    10\n",
-       "Zoniferol    10\n",
-       "Propriva     10\n",
        "Placebo      10\n",
+       "Ramicane     10\n",
+       "Infubinol    10\n",
+       "Propriva     10\n",
+       "Capomulin    10\n",
+       "Ketapril     10\n",
+       "Naftisol     10\n",
+       "Ceftamin     10\n",
+       "Stelasyn     10\n",
+       "Zoniferol    10\n",
        "Name: Drug, dtype: int64"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "Name: Tumor Volume (mm3), Length: 100, dtype: float64"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "20         53.346737  40.238325  54.067395  53.170334  "
       ]
      },
-     "execution_count": 176,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -547,7 +547,7 @@
        " 'Zoniferol']"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -621,7 +642,7 @@
        "Name: Metastatic Sites, dtype: float64"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +728,7 @@
        "4  Capomulin         20          0.652174"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +763,7 @@
        "Name: Metastatic Sites, Length: 100, dtype: float64"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +859,7 @@
        "4  Capomulin         20          0.161621"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,10 +871,369 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ** Survival Rates **\n",
+    "# Set Dependencies\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Drug       Timepoint\n",
+       "Capomulin  0            25\n",
+       "           5            25\n",
+       "           10           25\n",
+       "           15           24\n",
+       "           20           23\n",
+       "Name: Mouse ID, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Store the Count of Mice Grouped by Drug and Timepoint (W can pass any metric)\n",
+    "drug_data_df = pd.merge(trial_df, mouse_data, on=\"Mouse ID\")\n",
+    "mice_count = drug_data_df.groupby([\"Drug\", \"Timepoint\"])[\"Mouse ID\"].count()\n",
+    "mice_count.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Drug</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Mouse ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>10</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>15</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>20</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Drug  Timepoint  Mouse ID\n",
+       "0  Capomulin          0        25\n",
+       "1  Capomulin          5        25\n",
+       "2  Capomulin         10        25\n",
+       "3  Capomulin         15        24\n",
+       "4  Capomulin         20        23"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert to DataFrame\n",
+    "mice_count_df = pd.DataFrame(mice_count).reset_index()\n",
+    "\n",
+    "# Preview DataFrame\n",
+    "mice_count_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Drug</th>\n",
+       "      <th>Capomulin</th>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <th>Infubinol</th>\n",
+       "      <th>Ketapril</th>\n",
+       "      <th>Naftisol</th>\n",
+       "      <th>Placebo</th>\n",
+       "      <th>Propriva</th>\n",
+       "      <th>Ramicane</th>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <th>Zoniferol</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>26</td>\n",
+       "      <td>25</td>\n",
+       "      <td>26</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "      <td>21</td>\n",
+       "      <td>25</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>25</td>\n",
+       "      <td>20</td>\n",
+       "      <td>21</td>\n",
+       "      <td>22</td>\n",
+       "      <td>21</td>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>24</td>\n",
+       "      <td>19</td>\n",
+       "      <td>21</td>\n",
+       "      <td>19</td>\n",
+       "      <td>21</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>23</td>\n",
+       "      <td>18</td>\n",
+       "      <td>20</td>\n",
+       "      <td>19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>19</td>\n",
+       "      <td>17</td>\n",
+       "      <td>23</td>\n",
+       "      <td>21</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Drug       Capomulin  Ceftamin  Infubinol  Ketapril  Naftisol  Placebo  \\\n",
+       "Timepoint                                                                \n",
+       "0                 25        25         25        25        25       25   \n",
+       "5                 25        21         25        23        23       24   \n",
+       "10                25        20         21        22        21       24   \n",
+       "15                24        19         21        19        21       20   \n",
+       "20                23        18         20        19        20       19   \n",
+       "\n",
+       "Drug       Propriva  Ramicane  Stelasyn  Zoniferol  \n",
+       "Timepoint                                           \n",
+       "0                26        25        26         25  \n",
+       "5                25        25        25         24  \n",
+       "10               23        24        23         22  \n",
+       "15               17        24        23         21  \n",
+       "20               17        23        21         17  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Minor Data Munging to Re-Format the Data Frames\n",
+    "reformed_mince_count = mice_count_df.pivot(index=\"Timepoint\", \n",
+    "                                                   columns=\"Drug\",\n",
+    "                                                   values=\"Mouse ID\")\n",
+    "# Preview the Data Frame\n",
+    "reformed_mince_count.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate the Plot (Accounting for percentages)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the Figure\n",
+    "\n",
+    "# Show the Figure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ** Summary Bar Graph **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # Calculate the percent changes for each drug\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the data to confirm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Written description of three observable trends based on the data."
+   ]
   },
   {
    "cell_type": "code",
